// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDiagnostics 1`] = `
Object {
  "mainDocumentTransferSize": 50074,
  "maxRtt": 145.65800000000002,
  "maxServerLatency": 4980.4710000000005,
  "numFonts": 5,
  "numRequests": 201,
  "numScripts": 36,
  "numStylesheets": 7,
  "numTasks": 110,
  "numTasksOver100ms": 0,
  "numTasksOver10ms": 1,
  "numTasksOver25ms": 0,
  "numTasksOver500ms": 0,
  "numTasksOver50ms": 0,
  "rtt": 19.016000000000002,
  "throughput": 569783.0945443822,
  "totalByteWeight": 3897521,
  "totalTaskTime": 56.882000000000026,
}
`;

exports[`getMainThreadWorkBreakdown 1`] = `
Array [
  Object {
    "duration": 25.485,
    "group": "styleLayout",
  },
  Object {
    "duration": 22.353,
    "group": "other",
  },
  Object {
    "duration": 4.353999999999999,
    "group": "scriptEvaluation",
  },
  Object {
    "duration": 1.678,
    "group": "parseHTML",
  },
  Object {
    "duration": 1.411,
    "group": "garbageCollection",
  },
  Object {
    "duration": 0.8830000000000001,
    "group": "scriptParseCompile",
  },
  Object {
    "duration": 0.718,
    "group": "paintCompositeRender",
  },
]
`;

exports[`getMetrics 1`] = `
Object {
  "cumulativeLayoutShift": 24347,
  "domContentLoaded": undefined,
  "estimatedInputLatency": 16,
  "firstCPUIdle": 23117,
  "firstContentfulPaint": 18090,
  "firstInteractive": 24117,
  "firstMeaningfulPaint": 23117,
  "firstPaint": undefined,
  "firstVisualChange": undefined,
  "largestContentfulPaint": 23117,
  "lastVisualChange": undefined,
  "load": undefined,
  "serverResponseTime": 105,
  "speedIndex": 20411,
  "timeToFirstByte": 105,
  "totalBlockingTime": 20411,
}
`;

exports[`getPerformanceScore 1`] = `0.8`;

exports[`should allow to audit PWA results 1`] = `
Object {
  "details": Object {
    "appleTouchIcon": Object {
      "details": Object {},
      "displayValue": "apple-touch-icon",
      "score": 1,
    },
    "contentWith": Object {
      "details": Object {},
      "displayValue": "content-width",
      "score": 1,
    },
    "isInstallable": Object {
      "details": Object {},
      "displayValue": "installable-manifest",
      "score": 1,
    },
    "maskableIcon": Object {
      "details": Object {},
      "displayValue": "maskable-icon",
      "score": 1,
    },
    "serviceWorker": Object {
      "details": Object {},
      "displayValue": "service-worker",
      "score": 1,
    },
    "splashScreen": Object {
      "details": Object {},
      "displayValue": "splash-screen",
      "score": 0,
    },
    "themedOmnibox": Object {
      "details": Object {},
      "displayValue": "themed-omnibox",
      "score": 1,
    },
    "viewport": Object {
      "details": Object {},
      "displayValue": "viewport",
      "score": 1,
    },
  },
  "passed": false,
}
`;

exports[`should allow to audit PWA results 2`] = `
Object {
  "details": Object {
    "maskableIcon": Object {
      "details": Object {},
      "displayValue": "maskable-icon",
      "score": 1,
    },
    "serviceWorker": Object {
      "details": Object {},
      "displayValue": "service-worker",
      "score": 1,
    },
  },
  "passed": true,
}
`;
